--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
 group = 'Opensource_SW_Project'
 version = '0.0.1-SNAPSHOT'
 
+archivesBaseName = 'new-jar-name'
+
 java {
 	sourceCompatibility = '17'
 }
