--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
 	// json
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	implementation 'org.json:json:20231013'
 
 	//gson
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
